[package]
name = "spin"
version = "0.10.0"
authors = [
    "Mathijs van de Nes <git@mathijs.vd-nes.nl>",
    "John Ericson <git@JohnEricson.me>",
    "Joshua Barretto <joshua.s.barretto@gmail.com>",
]
license = "MIT"
repository = "https://github.com/mvdnes/spin-rs.git"
keywords = ["spinlock", "mutex", "rwlock"]
description = "Spin-based synchronization primitives"
rust-version = "1.60"

[dependencies]
lock_api_crate = { package = "lock_api", version = "0.4", optional = true }
# Enable require-cas feature to provide a better error message if the end user forgets to use the cfg or feature.
portable-atomic = { version = "1.3", optional = true, default-features = false, features = ["require-cas"] }

[features]
default = ["lock_api", "mutex", "spin_mutex", "rwlock", "once", "lazy", "barrier"]

# Enables `Mutex`. Must be used with either `spin_mutex` or `use_ticket_mutex`.
mutex = []

# Enables `SpinMutex` and the default spin mutex implementation for `Mutex`.
spin_mutex = ["mutex"]

# Enables `TicketMutex`.
ticket_mutex = ["mutex"]

# Enables `FairMutex`.
fair_mutex = ["mutex"]

# Enables the non-default ticket mutex implementation for `Mutex`.
use_ticket_mutex = ["mutex", "ticket_mutex"]

# Enables `RwLock`.
rwlock = []

# Enables `Once`.
once = []

# Enables `Lazy`.
lazy = ["once"]

# Enables `Barrier`. Because this feature uses `mutex`, either `spin_mutex` or `use_ticket_mutex` must be enabled.
barrier = ["mutex"]

# Enables `lock_api`-compatible types that use the primitives in this crate internally.
lock_api = ["dep:lock_api_crate"]

# Enables std-only features such as yield-relaxing.
std = []

# Use the `portable-atomic` crate to support platforms without native atomic operations.
# The `portable_atomic_unsafe_assume_single_core` cfg or `critical-section` feature
# of `portable-atomic` crate must also be set by the final binary crate.
# See the documentation for the `portable-atomic` crate for more information
# with some requirements for no-std build:
# https://github.com/taiki-e/portable-atomic#optional-features
portable-atomic = ["dep:portable-atomic"]

# Deprecated alias:
portable_atomic = ["portable-atomic"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "mutex"
harness = false
required-features = ["ticket_mutex"]
